scenarios/performance/config/envoy.yaml
---
static_resources:
  clusters:
    - connect_timeout: 5s
      dns_lookup_family: V4_ONLY
      load_assignment:
        cluster_name: service_fortio_server
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: fortio-server
                      port_value: 8080
      name: service_fortio_server
      type: LOGICAL_DNS
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 80
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                access_log:
                  - name: envoy.access_loggers.stdout
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                http_filters:
                  - name: envoy.filters.http.router
                route_config:
                  name: local_route
                  virtual_hosts:
                    - domains:
                        - 'envoy-proxy'
                        - 'envoy-proxy:80'
                      name: local_service
                      routes:
                        - match:
                            prefix: /
                          route:
                            cluster: service_fortio_server
                            host_rewrite_literal: fortio-server
                stat_prefix: ingress_http
      name: listener_0
